	other modules - this replaces the 'if fname/="Hierarchy" then' hack.

	* tools/hierarchyGen/Hierarchy.chs.template: new file. Template for
	class hierarchy definition modules. Used by the TypeGenerator program.
	
	* Makefile.am: modify invocation of TypeGenerator to pass template file
	and pass --parentname=Hierarchy for all packages other than gtk.

2004-12-12 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/gtk.pkg.in: change package_deps to haskell98 rather than base to
	fix linker problem.

	* Makefile.am: use $()-style make variable rather than @@-style
	variable substitution.

	* mk/common.mk: restore use of the $(HCFLAGS) in compile and link
	commands. The variable comes from ./configure's --with-hcflags
	parameter. Also when registering packages use update rather than add
	so that reinstallations do not fail.

2004-12-12 Axel Simon <A.Simon@kent.ac.uk> 

	* gtk/menuComboToolbar/Toolbar.chs.pp: Change comments in order
	not to confuse haddock. The pre-processor leaves blank lines which
	makes haddock assume the comment has ended. Use mult-line
	comments.
	
	* gtk/abstract/Range.chs, abstract/Widget.chs,
	display/Label.chs, misc/Adjustment.chs, scrolling/HScrollbar.chs,
	scrolling/VScrollbar.chs: Add some more functions.

	* Makefile.am, mk/common.mk: Avoid building dependencies when
	saying "make clean".

	* gtk/pango/Description.chs, gtk/pango/PangoEnums.chs: Rearranged
	enumerations, added new functions to query fonts.

	* gtk/pango/Markup.hs, gtk/pango/PangoLayout.chs,
	gtk/pango/PangoTypes.chs.pp, gtk/pango/Rendering.chs: As above. 
	New functionality only available due to fixed in c2hs that allow
	type synonyms in hooks.

	* tools/hierarchyGen/hierarchy.list: Corrected a typo.

	* demo/unicode/Arabic.hs: Simplify example.

	* gtk/general/Structs.hsc: Changed the type of pangoScale from Int
	to Integer.

	* acinclude.m4: Replaced a -I with a -L which fixes installation
	of packages.

	* sourceview/sourceview.pkg.in: Added forgotten comma.
	
